syntax = "proto3";
import "google/protobuf/empty.proto";
option csharp_namespace = "Chat.Shared";
package Services;

service EmailValidator {
  rpc ValidateEmail (EmailValidateRequest) returns (EmailValidateReply);
}

message EmailValidateRequest {
  string email = 1;
}

message EmailValidateReply {
  bool isSuccess = 1;
  string errorMessage = 2;
}

service RsaGenerator{
  rpc GenerateKeys(google.protobuf.Empty) returns (RsaKeysReply);
}

message RsaKeysReply {
  string publicKey = 1;
  string privateKey = 2;
}
